--- a/NAMESPACE
+++ b/NAMESPACE
@@ -263,8 +263,8 @@ export(specificity_vec)
 export(static_survival_metric_summarizer)
 export(tidy)
 export(validate_estimator)
-export(wis)
-export(wis_vec)
+export(weighted_interval_score)
+export(weighted_interval_score_vec)
 export(yardstick_any_missing)
 export(yardstick_remove_missing)
 import(rlang)
