add Royston metric

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ S3method(roc_aunp,data.frame)
 S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
 S3method(roc_curve_survival,data.frame)
+S3method(royston_survival,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
 S3method(rsq,data.frame)
@@ -244,6 +245,8 @@ export(roc_aunu)
 export(roc_aunu_vec)
 export(roc_curve)
 export(roc_curve_survival)
+export(royston_survival)
+export(royston_survival_vec)
 export(rpd)
 export(rpd_vec)
 export(rpiq)
