--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -122,6 +122,7 @@ Collate:
     'surv-concordance_survival.R'
     'surv-roc_auc_survival.R'
     'surv-roc_curve_survival.R'
+    'surv-royston.R'
     'template.R'
     'validation.R'
     'yardstick-package.R'
