--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -90,6 +90,10 @@ reference:
   contents:
   - concordance_survival
 
+- title: Linear Predictor Survival Metrics
+  contents:
+  - royston_survival
+
 - title: Curve Survival Functions
   contents:
   - roc_curve_survival
