add quantile metric infrastructure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,6 +214,7 @@ export(new_linear_pred_survival_metric)
 export(new_numeric_metric)
 export(new_ordered_prob_metric)
 export(new_prob_metric)
+export(new_quantile_metric)
 export(new_static_survival_metric)
 export(npv)
 export(npv_vec)
@@ -229,6 +230,7 @@ export(pr_curve)
 export(precision)
 export(precision_vec)
 export(prob_metric_summarizer)
+export(quantile_metric_summarizer)
 export(ranked_prob_score)
 export(ranked_prob_score_vec)
 export(recall)
