add weighted_interval_score.data.frame() method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ S3method(tidy,conf_mat)
 S3method(validate_truth_estimate_types,default)
 S3method(validate_truth_estimate_types,factor)
 S3method(validate_truth_estimate_types,numeric)
+S3method(weighted_interval_score,data.frame)
 export(accuracy)
 export(accuracy_vec)
 export(average_precision)
