--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ S3method(tidy,conf_mat)
 S3method(validate_truth_estimate_types,default)
 S3method(validate_truth_estimate_types,factor)
 S3method(validate_truth_estimate_types,numeric)
+S3method(weighted_interval_score,data.frame)
 export(accuracy)
 export(accuracy_vec)
 export(average_precision)
@@ -151,6 +152,7 @@ export(check_linear_pred_survival_metric)
 export(check_numeric_metric)
 export(check_ordered_prob_metric)
 export(check_prob_metric)
+export(check_quantile_metric)
 export(check_static_survival_metric)
 export(class_metric_summarizer)
 export(classification_cost)
@@ -214,6 +216,7 @@ export(new_linear_pred_survival_metric)
 export(new_numeric_metric)
 export(new_ordered_prob_metric)
 export(new_prob_metric)
+export(new_quantile_metric)
 export(new_static_survival_metric)
 export(npv)
 export(npv_vec)
@@ -229,6 +232,7 @@ export(pr_curve)
 export(precision)
 export(precision_vec)
 export(prob_metric_summarizer)
+export(quantile_metric_summarizer)
 export(ranked_prob_score)
 export(ranked_prob_score_vec)
 export(recall)
@@ -268,6 +272,8 @@ export(specificity_vec)
 export(static_survival_metric_summarizer)
 export(tidy)
 export(validate_estimator)
+export(weighted_interval_score)
+export(weighted_interval_score_vec)
 export(yardstick_any_missing)
 export(yardstick_remove_missing)
 import(rlang)
