align file name with function nale

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -85,6 +85,7 @@ Collate:
     'missings.R'
     'num-ccc.R'
     'num-huber_loss.R'
+    'num-huber_loss_pseudo.R'
     'num-iic.R'
     'num-mae.R'
     'num-mape.R'
@@ -92,7 +93,6 @@ Collate:
     'num-mpe.R'
     'num-msd.R'
     'num-poisson_log_loss.R'
-    'num-pseudo_huber_loss.R'
     'num-rmse.R'
     'num-rpd.R'
     'num-rpiq.R'
