--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -106,16 +106,16 @@ Collate:
     'prob-brier_class.R'
     'prob-classification_cost.R'
     'prob-gain_capture.R'
-    'prob-gain_curve.R'
     'prob-helpers.R'
-    'prob-lift_curve.R'
     'prob-mn_log_loss.R'
     'prob-pr_auc.R'
-    'prob-pr_curve.R'
     'prob-roc_auc.R'
     'prob-roc_aunp.R'
     'prob-roc_aunu.R'
-    'prob-roc_curve.R'
+    'probcurve-gain_curve.R'
+    'probcurve-lift_curve.R'
+    'probcurve-pr_curve.R'
+    'probcurve-roc_curve.R'
     'quant-weighted_interval_score.R'
     'reexports.R'
     'surv-brier_survival.R'
