add fall_out() and miss_rate()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,9 +60,11 @@ Collate:
     'class-bal_accuracy.R'
     'class-detection_prevalence.R'
     'class-f_meas.R'
+    'class-fall_out.R'
     'class-j_index.R'
     'class-kap.R'
     'class-mcc.R'
+    'class-miss_rate.R'
     'class-npv.R'
     'class-ppv.R'
     'class-precision.R'
