--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,9 @@ S3method(detection_prevalence,table)
 S3method(f_meas,data.frame)
 S3method(f_meas,matrix)
 S3method(f_meas,table)
+S3method(fall_out,data.frame)
+S3method(fall_out,matrix)
+S3method(fall_out,table)
 S3method(finalize_estimator_default,Surv)
 S3method(finalize_estimator_default,default)
 S3method(finalize_estimator_default,factor)
@@ -74,6 +77,9 @@ S3method(mcc,data.frame)
 S3method(mcc,matrix)
 S3method(mcc,table)
 S3method(metrics,data.frame)
+S3method(miss_rate,data.frame)
+S3method(miss_rate,matrix)
+S3method(miss_rate,table)
 S3method(mn_log_loss,data.frame)
 S3method(mpe,data.frame)
 S3method(msd,data.frame)
@@ -171,6 +177,8 @@ export(equal_opportunity)
 export(equalized_odds)
 export(f_meas)
 export(f_meas_vec)
+export(fall_out)
+export(fall_out_vec)
 export(finalize_estimator)
 export(finalize_estimator_internal)
 export(gain_capture)
@@ -202,6 +210,8 @@ export(metric_summarizer)
 export(metric_tweak)
 export(metric_vec_template)
 export(metrics)
+export(miss_rate)
+export(miss_rate_vec)
 export(mn_log_loss)
 export(mn_log_loss_vec)
 export(mpe)
