--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ export(finalize_estimator_internal)
 export(gain_capture)
 export(gain_capture_vec)
 export(gain_curve)
+export(get_metrics)
 export(get_weights)
 export(huber_loss)
 export(huber_loss_pseudo)
