--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Collate: 
+    'aaa-get_metrics.R'
     'aaa-metric_set.R'
     'aaa-metrics.R'
     'import-standalone-types-check.R'
