--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ S3method(recall,data.frame)
 S3method(recall,matrix)
 S3method(recall,table)
 S3method(rmse,data.frame)
+S3method(rmse_relative,data.frame)
 S3method(roc_auc,data.frame)
 S3method(roc_auc_survival,data.frame)
 S3method(roc_aunp,data.frame)
@@ -249,6 +250,8 @@ export(ranked_prob_score_vec)
 export(recall)
 export(recall_vec)
 export(rmse)
+export(rmse_relative)
+export(rmse_relative_vec)
 export(rmse_vec)
 export(roc_auc)
 export(roc_auc_survival)
