--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ S3method(miss_rate,table)
 S3method(mn_log_loss,data.frame)
 S3method(mpe,data.frame)
 S3method(msd,data.frame)
+S3method(mse,data.frame)
 S3method(multiclass_checks,default)
 S3method(multiclass_checks,factor)
 S3method(multiclass_checks,matrix)
@@ -220,6 +221,8 @@ export(mpe)
 export(mpe_vec)
 export(msd)
 export(msd_vec)
+export(mse)
+export(mse_vec)
 export(new_class_metric)
 export(new_dynamic_survival_metric)
 export(new_groupwise_metric)
