Add `roc_dist()` metric (#621)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,9 @@ S3method(roc_aunp,data.frame)
 S3method(roc_aunu,data.frame)
 S3method(roc_curve,data.frame)
 S3method(roc_curve_survival,data.frame)
+S3method(roc_dist,data.frame)
+S3method(roc_dist,matrix)
+S3method(roc_dist,table)
 S3method(royston_survival,data.frame)
 S3method(rpd,data.frame)
 S3method(rpiq,data.frame)
@@ -266,6 +269,8 @@ export(roc_aunu)
 export(roc_aunu_vec)
 export(roc_curve)
 export(roc_curve_survival)
+export(roc_dist)
+export(roc_dist_vec)
 export(royston_survival)
 export(royston_survival_vec)
 export(rpd)
