--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,9 @@ S3method(kap,table)
 S3method(lift_curve,data.frame)
 S3method(mae,data.frame)
 S3method(mape,data.frame)
+S3method(markedness,data.frame)
+S3method(markedness,matrix)
+S3method(markedness,table)
 S3method(mase,data.frame)
 S3method(mcc,data.frame)
 S3method(mcc,matrix)
@@ -207,6 +210,8 @@ export(mae)
 export(mae_vec)
 export(mape)
 export(mape_vec)
+export(markedness)
+export(markedness_vec)
 export(mase)
 export(mase_vec)
 export(mcc)
