--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ S3method(format,metric_factory)
 S3method(format,metric_set)
 S3method(gain_capture,data.frame)
 S3method(gain_curve,data.frame)
+S3method(gini_coef,data.frame)
 S3method(huber_loss,data.frame)
 S3method(huber_loss_pseudo,data.frame)
 S3method(iic,data.frame)
@@ -194,6 +195,8 @@ export(gain_capture_vec)
 export(gain_curve)
 export(get_metrics)
 export(get_weights)
+export(gini_coef)
+export(gini_coef_vec)
 export(huber_loss)
 export(huber_loss_pseudo)
 export(huber_loss_pseudo_vec)
